   slower hosts, increase to 10 sec.
 - (dtucker) [auth-passwd.c] On AIX, call setauthdb() before loginsuccess(),
   required to correctly reset failed login count when using a password
   registry other than "files" (eg LDAP, see bug #543).
 - (tim) [configure.ac] define WITH_ABBREV_NO_TTY for SCO.
   Report by Roger Cornelius.

20030912
 - (tim) [regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".
 - (tim) [Makefile.in] only mkdir regress if it does not exist.
 - (tim) [regress/yes-head.sh] shell portability fix.

20030911
 - (dtucker) [configure.ac] Bug #588, #615: Move other libgen tests to after
   the dirname test, to allow a broken dirname to be detected correctly.
   Based partially on patch supplied by alex.kiernan at thus.net.  ok djm@
 - (tim) [configure.ac] Move libgen tests to before libwrap to unbreak
   UnixWare 2.03 using --with-tcp-wrappers.
 - (tim) [configure.ac] Prefer setuid/setgid on UnixWare and Open Server.
 - (tim) [regress/agent-ptrace.sh regress/dynamic-forward.sh
   regress/sftp-cmds.sh regress/stderr-after-eof.sh regress/test-exec.sh]
   no longer depends on which(1). patch by dtucker@

20030910
 - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
   Patch from wendyp at cray.com.
 - (dtucker) [configure.ac] Part of bug #615: tcsendbreak might be a macro.
 - (dtucker) [regressh/yes-head.sh] Some platforms (eg Solaris) don't have
   "yes".

20030909
 - (tim) [regress/Makefile] Fixes for building outside of a read-only
   source tree.
 - (tim) [regress/agent-timeout.sh] s/TIMEOUT/SSHAGENT_TIMEOUT/ Fixes conflict
   with shell read-only variable.
 - (tim) [regress/sftp-badcmds.sh regress/sftp-cmds.sh] Fix errors like
   UX:rm: ERROR: Cannot remove '.' or '..'

20030908
 - (tim) [configure.ac openbsd-compat/getrrsetbyname.c] wrap _getshort and
   _getlong in #ifndef
 - (tim) [configure.ac acconfig.h openbsd-compat/getrrsetbyname.c] test for
   HEADER.ad in arpa/nameser.h